          applications. The changes _emulate_ aspects of DAV level 2
          locking but do _not_ provide actual locking support at the
          present time.

        - Files and Images now can be served without loading themselves
          into memory. This is automatically done for large Files and 
          Images. As a by product, RESPONSE.write now works better in
          ZServer.

      Features Changed

        - ZCatalog uses subtransactions to keep memory consuption low
          at the expense of indexing speed.  Subtransactions can now
          be disabled through the management interface for use with
          non subtransactions compatible objects like ZSQL Methods (or
          for raw speed if you have lots of RAM).

        - Added a coptimizations module.  The first optimization is
          to provide an implementation of persistent_id in C.  This
          routine, which is called extremely often while pickling was
          found to be a significant bottleneck.

        - More flexible cache management methods were added to ZODB
          Connection objects so that apps that want to move objects
          out of memory can force aggressive cache behavior.

        - Added the beginnings of internationalization support to Zope.
          The Zope startup script (z2.py) now supports a "-L" option 
          that can be used to pass a locale name (such as "en" or "de")
          to Zope at startup. If specified, Zope will attempt to set the
          locale using the locale module if it is available. This change
          will allow Zope to better handle international characters in
          a number of places such as searching and indexing.

        - Logging from ZServer modified to produce Common Log Format
          in a Combined format, where user-agent and referer are also 
          logged.
          
        - xmlrpclib was updated to relect the current version (0.9.8)
          from Pythonware.

      Bugs Fixed
